# docs/swagger.yaml
@@ -19,6 +19,28 @@ definitions:
     - images
     - title
     type: object
+  ctype.ImageType:
+    enum:
+    - 1
+    - 2
+    type: integer
+    x-enum-comments:
+      Local: 本地
+      QiNiu: 七牛云
+    x-enum-varnames:
+    - Local
+    - QiNiu
+  images_api.ImageResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        description: 图片名称
+        type: string
+      path:
+        description: 路径图片
+        type: string
+    type: object
   models.AdvertModel:
     properties:
       date:
@@ -40,6 +62,28 @@ definitions:
         description: 显示的标题
         type: string
     type: object
+  models.BannerModel:
+    properties:
+      date:
+        description: 创建时间
+        type: string
+      hash:
+        description: 图片的hash值，用于判断重复图片
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      image_type:
+        allOf:
+        - $ref: '#/definitions/ctype.ImageType'
+        description: 图片类型，本地还是七牛(默认为1，即本地)
+      name:
+        description: 图片名称
+        type: string
+      path:
+        description: 路径图片
+        type: string
+    type: object
   models.RemoveRequest:
     properties:
       id_list:
@@ -53,6 +97,13 @@ definitions:
         type: integer
       list:
         $ref: '#/definitions/models.AdvertModel'
+    type: object
+  res.ListResponse-models_BannerModel:
+    properties:
+      count:
+        type: integer
+      list:
+        $ref: '#/definitions/models.BannerModel'
     type: object
   res.Response:
     properties:
@@ -173,4 +224,59 @@ paths:
       summary: 更新广告
       tags:
       - 广告管理
+  /api/image_names:
+    get:
+      description: 图片名称列表
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/images_api.ImageResponse'
+                  type: array
+              type: object
+      summary: 图片名称列表
+      tags:
+      - 图片管理
+  /api/images:
+    get:
+      description: 图片列表
+      parameters:
+      - description: 模糊匹配的关键字
+        in: query
+        name: key
+        type: string
+      - description: 限制数量,如果不设置，默认为0，就是不分页
+        in: query
+        name: limit
+        type: integer
+      - description: 当前页，当前在第几页
+        in: query
+        name: page
+        type: integer
+      - description: 排序,谁在前面谁在后面的排序
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.ListResponse-models_BannerModel'
+              type: object
+      summary: 图片列表
+      tags:
+      - 图片管理
 swagger: "2.0"
