# routers/images_router.go
@@ -8,6 +8,7 @@ import (
 func ImagesRouter(router *gin.RouterGroup) {
 	app := api.ApiGroupApp.ImagesApi
 	router.GET("images", app.ImageListView)
+	router.GET("image_names", app.ImageNameListView)
 	router.POST("images", app.ImageUploadView)
 	router.DELETE("images", app.ImageRemoveView)
 	router.PUT("images", app.ImageUpdateView)
